Bug: Temporarily disable collapse menu for mobile until fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,3 +37,7 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
+
+.nav-link.disabled {
+  pointer-events: none;
+}
